# fastapi-blog

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.local  Makefile  README.md  docker-compose.local.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
backend/: Dockerfile.prod
backend/app/: main.py
backend/app/data/interfaces/: post_repository_interface.py  user_repository_interface.py
backend/app/domain/models/: post_model.py  user_model.py
backend/app/infra/config/: db_config.py
backend/app/infra/entities/: posts.py  posts_entity.py  users.py  users_entity.py
backend/app/infra/repo/: post_repository.py  user_repository.py
backend/docs/: requirements.md
backend/reports/coverage/: d_9b5d3c41184f4a9e___init___py.html  d_9b5d3c41184f4a9e_test_db_config_py.html  d_9b5d3c41184f4a9e_test_posts_py.html  d_9b5d3c41184f4a9e_test_users_py.html  index.html  status.json
backend/tests/: conftest.py  test_db_config.py  test_posts.py  test_user_repository.py  test_users.py
backend/tests/infra/: test_db_config.py  test_post_model.py  test_post_repository.py  test_user_model.py  test_user_repository.py
docs/: pull_request_template.md
