[tool.poetry]
name = "fastapi-blog"
version = "1.0.0"
description = "My personal blog built using FastAPI."
authors = ["Gabriel <gbrcenciati@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fastapi_blog"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
autoflake = "^2.0.0"
isort = "^5.10.1"
black = "^22.10.0"
mypy = "^0.991"
pylint = "^2.15.7"
flake8 = "^6.0.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.autoflake]

[tool.isort]
atomic = true
profile = "black"
line_length = 79
skip_gitignore = true

[tool.black]
line-length = 79

[tool.mypy]

[tool.pylint]
max-line-length = 79
disable = ["C0330"]

[tool.flake8]
max-complexity = 10
max-line-length = 79
exclude = ".venv/"
extend-ignore = ["W503"]
per-file-ignores = "__init__.py: F401"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "-s",
    "--strict-config",
    "--strict-markers",
    "--cov",
    "--cov-report html:reports/coverage",
    "--cov-report term-missing",
    "--cov-fail-under 80",
]
filterwarnings = [
    "error"
]

[tool.coverage.run]
parallel = true
source = ["tests"]
