[tool.poetry]
name = "fastapi-blog"
version = "0.1.0-alpha"
description = "My personal blog built using FastAPI."
authors = ["Gabriel <gbrcenciati@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fastapi_blog"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
sqlalchemy = "^1.4.44"
uvicorn = "^0.20.0"
python-dotenv = "^0.21.0"
pydantic = {extras = ["email"], version = "^1.10.2"}
psycopg2-binary = "^2.9.5"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
autoflake = "^2.0.0"
isort = "^5.10.1"
black = "^22.10.0"
mypy = "^0.991"
pylint = "^2.15.7"
flake8 = "^6.0.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
sqlalchemy-stubs = "^0.4"
faker = "^15.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.autoflake]
check = false
in-place = true
recursive = true
expand-star-imports = true
ignore-init-module-imports = true
remove-duplicate-keys = true
remove-all-unused-imports = true
remove-unused-variables = true
verbose = 0

[tool.isort]
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true

[tool.black]
line-length = 88

[tool.mypy]
ignore_missing_imports = true

[tool.pylint]
max-line-length = 88
exclude = [".venv/"]
disable = ["C0114", "R0903"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["W503", "E501"]
exclude = [".venv/"]
per-file-ignores = "__init__.py: F401"

[tool.pytest.ini_options]
addopts = [
    "-v", "-s",
    "--strict-config",
    "--strict-markers",
    "--cov",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:backend/reports/coverage",
    "--cov-fail-under=80",
]
filterwarnings = ["error"]
testpaths = ["backend/tests"]

[tool.coverage.run]
parallel = true
source = ["backend/tests"]
